[package]
name = "simple-anvil"
version = "0.2.0"
authors = ["Nathaniel Richardson <ncrichardson15@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A simple anvil file parser intended for use with Minecraft related applications."
repository = "https://github.com/nuhtan/simple-anvil"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hematite-nbt = "0.5.2"